--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ environs = "^6.1"
 numpy = "^1.17"
 requests = "^2.22"
 pytest = "^5.3"
-loguru = "^0.3.2"
+loguru = "^0.4"
 aiofiles = "^0.4.0"
 uvicorn = "^0.10.8"
 pymongo = "^3.10.0"
@@ -23,6 +23,7 @@ graphviz = "^0.13.2"
 pytest-xdist = "^1.31.0"
 pandas = "^1.0.1"
 pyyaml = "^5.3.1"
+pydantic = "^1.5"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
