--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ pyyaml = "^5.3.1"
 pydantic = "^1.5"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^18.3-alpha.0", allow-prereleases = true}
+black = {version = "^19", allow-prereleases = true}
 mypy = {version = "^0.740.0", allow-prereleases = true}
 jedi = {version = "^0.15.1", allow-prereleases = true}
 jupyterlab = {version = "^1.2", allow-prereleases = true}
