--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pyyaml = "^5.3.1"
 pydantic = "^1.5"
 colorama = "^0.4.3"
 loguru = ">=0.5.1"
+anonymizeip = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^19", allow-prereleases = true}
