--- a/environment.yml
+++ b/environment.yml
@@ -28,7 +28,9 @@ dependencies:
   - python-graphviz
   - pandoc
   - tabulate
-  - anonymizeip
   - r-tidyverse
   - r-rmarkdown
   - r-reticulate
+  - pip
+  - pip:
+    - anonymizeip
