--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,6 @@ uvicorn = "^0.10.8"
 pymongo = "^3.10.0"
 elasticsearch = "^7.1.0"
 elasticsearch-dsl = "^7.1.0"
-neo4j-driver = "^1.7.6"
-neobolt = "^1.7.16"
 graphviz = "^0.13.2"
 pytest-xdist = "^1.31.0"
 pandas = "^1.0.1"
@@ -26,6 +24,7 @@ pydantic = "^1.5"
 colorama = "^0.4.3"
 loguru = ">=0.5.1"
 anonymizeip = "^1.0.0"
+neo4j = "~4.2"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^19", allow-prereleases = true}
