--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ pydantic = "^1.5"
 colorama = "^0.4.3"
 loguru = ">=0.5.1"
 anonymizeip = "^1.0.0"
-neo4j = "~4.2"
+neo4j = "^1.7"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^19", allow-prereleases = true}
