[dependency] Fix poetry issues

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -5,7 +5,9 @@ RUN apt update && apt install -y graphviz
 RUN python -m pip install --upgrade pip
 
 COPY ./poetry.lock ./pyproject.toml ./
-RUN pip install poetry
+# poetry and its dependencies
+  # TODO: why poetry fails to install its dependencies??
+RUN pip install poetry appdirs
 RUN poetry config virtualenvs.create false \
   && poetry install
 
