--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,13 +27,14 @@ anonymizeip = "^1.0.0"
 neo4j = "^1.7"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^19", allow-prereleases = true}
 mypy = {version = "^0.740.0", allow-prereleases = true}
 jedi = {version = "^0.15.1", allow-prereleases = true}
 isort = {version = "^4.3", allow-prereleases = true}
 autoflake = {version = "^1.3", allow-prereleases = true}
 flake8 = {version = "^3.7.9", allow-prereleases = true}
 ipython = "^7.11.1"
+black = "^20.8b1"
+nb-black = "^1.0.7"
 
 [tool.black]
 line-length = 79
