--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,7 +1,8 @@
 # -*- mode: dockerfile -*-
 FROM tiangolo/uvicorn-gunicorn-fastapi:python3.7
 
-RUN apt update && apt install -y graphviz
+RUN curl -fsSL https://deb.nodesource.com/setup_15.x | bash
+RUN apt-get install -y graphviz nodejs
 RUN python -m pip install --upgrade pip
 
 COPY ./poetry.lock ./pyproject.toml ./
