--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ flake8 = {version = "^3.7.9", allow-prereleases = true}
 ipython = "^7.11.1"
 black = "^20.8b1"
 nb-black = "^1.0.7"
+jupyterlab = "^3.0.9"
 
 [tool.black]
 line-length = 79
