--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ ipython = "^7.11.1"
 black = "^20.8b1"
 nb-black = "^1.0.7"
 jupyterlab = "^3.0.9"
+tabulate = "^0.8.9"
 
 [tool.black]
 line-length = 79
